Added a table view and working on second screen.

--- a/emojiDictionary/Base.lproj/Main.storyboard
+++ b/emojiDictionary/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="17E202" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="emojiDictionary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,62 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="o2g-kJ-Izt">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="o2g-kJ-Izt" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="CKr-Yo-Jcj"/>
+                            <constraint firstItem="o2g-kJ-Izt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EJS-CL-gpP"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o2g-kJ-Izt" secondAttribute="bottom" id="oCT-nv-RHZ"/>
+                            <constraint firstAttribute="trailing" secondItem="o2g-kJ-Izt" secondAttribute="trailing" id="s7e-e0-5Nx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="o2g-kJ-Izt" id="ERR-ep-L07"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-169" y="59"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wng-m0-PT2">
+            <objects>
+                <viewController id="edu-ug-f9G" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vic-Jo-FlE"/>
+                        <viewControllerLayoutGuide type="bottom" id="hwW-uM-ViA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="G40-6a-b76">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="😁" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SVP-tV-FhC">
+                                <fontDescription key="fontDescription" type="system" pointSize="200"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a great smile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBh-la-8dm">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yBh-la-8dm" firstAttribute="top" secondItem="SVP-tV-FhC" secondAttribute="bottom" constant="20" id="5EG-Ht-VQ6"/>
+                            <constraint firstItem="SVP-tV-FhC" firstAttribute="centerX" secondItem="G40-6a-b76" secondAttribute="centerX" id="H2h-m5-3bG"/>
+                            <constraint firstItem="SVP-tV-FhC" firstAttribute="top" secondItem="vic-Jo-FlE" secondAttribute="bottom" constant="40" id="Mk9-HG-vFy"/>
+                            <constraint firstItem="yBh-la-8dm" firstAttribute="centerX" secondItem="G40-6a-b76" secondAttribute="centerX" id="UD9-91-Sd2"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PSL-bc-uMO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="690" y="59"/>
         </scene>
     </scenes>
 </document>
